# inorbit-connector-cookiecutter

./: .gitignore  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test-cookiecutter.yml
hooks/: __init__.py  post_gen_project.py
test/: __init__.py  conftest.py  test_makefile_version_bump.py  test_post_gen_hook.py
tests/: conftest.py  test_makefile_version_bump.py  test_post_gen_hook.py
{{cookiecutter.connector_slug}}_connector/: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  pyproject.toml
{{cookiecutter.connector_slug}}_connector/.github/workflows/: {{cookiecutter.connector_slug}}_workflows.yml
{{cookiecutter.connector_slug}}_connector/cac/: actions.yaml  data_sources.yaml  footprint.yaml  mission_tracking.yaml  status_definition.yaml
{{cookiecutter.connector_slug}}_connector/config/: .gitignore  example.env  fleet.example.yaml
{{cookiecutter.connector_slug}}_connector/docker/: Dockerfile  build.sh  docker-compose.example.yaml
{{cookiecutter.connector_slug}}_connector/tests/: conftest.py  test_config_models.py
{{cookiecutter.connector_slug}}_connector/{{cookiecutter.connector_slug}}_connector/: __init__.py  {{cookiecutter.connector_slug}}_connector.py
{{cookiecutter.connector_slug}}_connector/{{cookiecutter.connector_slug}}_connector/src/: __init__.py  commands.py  connector.py
{{cookiecutter.connector_slug}}_connector/{{cookiecutter.connector_slug}}_connector/src/config/: __init__.py  models.py
