# SPDX-FileCopyrightText: 2026 InOrbit, Inc.
#
# SPDX-License-Identifier: MIT

[project]
name = "inorbit-connector-cookiecutter"
version = "0.1.0"
description = "Cookiecutter template for InOrbit connectors"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "InOrbit, Inc.", email = "support@inorbit.ai" },
]
maintainers = [
    { name = "InOrbit, Inc.", email = "support@inorbit.ai" },
]
keywords = ["cookiecutter", "inorbit", "connector", "template", "cookiecutter-template", "edge-connector", "robotics", "robops"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/inorbit-ai/inorbit-connector-cookiecutter"
Documentation = "https://github.com/inorbit-ai/inorbit-connector-cookiecutter#readme"
Repository = "https://github.com/inorbit-ai/inorbit-connector-cookiecutter"
Issues = "https://github.com/inorbit-ai/inorbit-connector-cookiecutter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "cookiecutter>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test"] # Prevent pytest from trying to find tests in the cookiecutter template
